# vim-picomap

./: Cargo.toml  README.md  install.sh
.github/workflows/: build.yaml  test.yaml
autoload/: micromap.vim  picomap.vim
ftplugin/: micromap.vim  picomap.vim
plugin/: micromap.vim  picomap.vim
src/: channel_stream.rs  highlighter.rs  lib.rs  main.rs  message.rs  picomap.rs  server.rs
