[package]
name = "vim-picomap"
version = "0.1.0"
authors = ["mjhd <mjhd.devlion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neovim-lib = { git = "https://github.com/daa84/neovim-lib", branch = "master" }
anyhow = "1.0.31"
rmpv = "0.4.4"
smol = "0.3.3"
signal-hook = "0.1.16"
async-trait = "0.1.37"
